<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="start"/>

        <TextView
            android:id="@+id/txtBookingType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_type"
            android:textSize="16sp"
            android:gravity="start"/>

        <TextView
            android:id="@+id/txtBookingDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_details"
            android:textSize="14sp"
            android:gravity="start"
            android:ellipsize="end"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
